Ciscenje od suvisnog koda

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.error.whitelabel.enabled=false
 
+# Malo da promenimo port...
 server.port=8081
